@@ -20,6 +20,7 @@ module ActiveMerchant #:nodoc:
     # * Forbrugsforeningen
     # * Elo
     # * Alelo
+    # * Cabal
     #
     # For testing purposes, use the 'bogus' credit card brand. This skips the vast majority of
     # validations, allowing you to focus on your core concerns until you're ready to be more concerned
@@ -92,6 +93,7 @@ module ActiveMerchant #:nodoc:
       # * +'forbrugsforeningen'+
       # * +'elo'+
       # * +'alelo'+
+      # * +'cabal'+
       #
       # Or, if you wish to test your implementation, +'bogus'+.
       #
