@@ -16,6 +16,7 @@ module ActiveMerchant #:nodoc:
         'forbrugsforeningen' => ->(num) { num =~ /^600722\d{10}$/ },
         'sodexo'             => ->(num) { num =~ /^(606071|603389|606070|606069|606068|600818)\d{10}$/ },
         'vr'                 => ->(num) { num =~ /^(627416|637036)\d{10}$/ },
+        'cabal'              => ->(num) { num&.size == 16 && in_bin_range?(num.slice(0, 8), CABAL_RANGES) },
         'carnet'             => lambda { |num|
           num&.size == 16 && (
             in_bin_range?(num.slice(0, 6), CARNET_RANGES) ||
@@ -91,6 +92,12 @@ module ActiveMerchant #:nodoc:
         496067..496067, 506699..506704, 506706..506706, 506713..506714, 506716..506716,
         506749..506750, 506752..506752, 506754..506756, 506758..506762, 506764..506767,
         506770..506771, 509015..509019, 509880..509882, 509884..509885, 509987..509988
+      ]
+
+      CABAL_RANGES = [
+        60420100..60440099,
+        58965700..58965799,
+        60352200..60352299
       ]
 
       def self.included(base)
