@@ -3,10 +3,18 @@ require 'test_helper'
 class RemoteMercadoPagoTest < Test::Unit::TestCase
   def setup
     @gateway = MercadoPagoGateway.new(fixtures(:mercado_pago))
+    @argentina_gateway = MercadoPagoGateway.new(fixtures(:mercado_pago_argentina))
 
     @amount = 500
     @credit_card = credit_card('4509953566233704')
     @elo_credit_card = credit_card('5067268650517446',
+      :month => 10,
+      :year => 2020,
+      :first_name => 'John',
+      :last_name => 'Smith',
+      :verification_value => '737'
+    )
+    @cabal_credit_card = credit_card('6035227716427021',
       :month => 10,
       :year => 2020,
       :first_name => 'John',
@@ -37,6 +45,12 @@ class RemoteMercadoPagoTest < Test::Unit::TestCase
 
   def test_successful_purchase_with_elo
     response = @gateway.purchase(@amount, @elo_credit_card, @options)
+    assert_success response
+    assert_equal 'accredited', response.message
+  end
+
+  def test_successful_purchase_with_cabal
+    response = @argentina_gateway.purchase(@amount, @cabal_credit_card, @options)
     assert_success response
     assert_equal 'accredited', response.message
   end
@@ -90,6 +104,16 @@ class RemoteMercadoPagoTest < Test::Unit::TestCase
     assert_equal 'accredited', capture.message
   end
 
+  def test_successful_authorize_and_capture_with_cabal
+    auth = @argentina_gateway.authorize(@amount, @cabal_credit_card, @options)
+    assert_success auth
+    assert_equal 'pending_capture', auth.message
+
+    assert capture = @argentina_gateway.capture(@amount, auth.authorization)
+    assert_success capture
+    assert_equal 'accredited', capture.message
+  end
+
   def test_failed_authorize
     response = @gateway.authorize(@amount, @declined_card, @options)
     assert_failure response
@@ -129,6 +153,15 @@ class RemoteMercadoPagoTest < Test::Unit::TestCase
     assert_equal nil, refund.message
   end
 
+  def test_successful_refund_with_cabal
+    purchase = @argentina_gateway.purchase(@amount, @cabal_credit_card, @options)
+    assert_success purchase
+
+    assert refund = @argentina_gateway.refund(@amount, purchase.authorization)
+    assert_success refund
+    assert_equal nil, refund.message
+  end
+
   def test_partial_refund
     purchase = @gateway.purchase(@amount, @credit_card, @options)
     assert_success purchase
@@ -157,6 +190,15 @@ class RemoteMercadoPagoTest < Test::Unit::TestCase
     assert_success auth
 
     assert void = @gateway.void(auth.authorization)
+    assert_success void
+    assert_equal 'by_collector', void.message
+  end
+
+  def test_successful_void_with_cabal
+    auth = @argentina_gateway.authorize(@amount, @cabal_credit_card, @options)
+    assert_success auth
+
+    assert void = @argentina_gateway.void(auth.authorization)
     assert_success void
     assert_equal 'by_collector', void.message
   end
