@@ -155,6 +155,12 @@ class CreditCardMethodsTest < Test::Unit::TestCase
     assert_equal 'visa', CreditCard.brand?('4025880000000044')
   end
 
+  def test_should_detect_cabal_card
+    assert_equal 'cabal', CreditCard.brand?('6044009000000000')
+    assert_equal 'cabal', CreditCard.brand?('5896575500000000')
+    assert_equal 'cabal', CreditCard.brand?('6035224400000000')
+  end
+
   def test_should_detect_when_an_argument_brand_does_not_match_calculated_brand
     assert CreditCard.matching_brand?('4175001000000000', 'visa')
     assert_false CreditCard.matching_brand?('4175001000000000', 'master')
