@@ -7,6 +7,7 @@
 * Realex: Re-implement credit as general credit [leila-alderman] #3280
 * Paymill: Add currency and amount to store requests [jasonxp] #3289
 * Realex: Prevent error calculating `refund_hash` or `credit_hash` when the secret is nil [jasonxp] #3291
+* MercadoPago: Add Cabal card type [leila-alderman] #3295
 
 == Version 1.96.0 (Jul 26, 2019)
 * Bluesnap: Omit state codes for unsupported countries [therufs] #3229
